# IA_para_DEVs_T4_M1

aula_3/SDD_Manual_pix_keys_management_api/pix-key-management-api/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
aula_3/SDD_Manual_pix_keys_management_api/pix-key-management-api/migrations/: __init__.py  env.py
aula_3/SDD_Manual_pix_keys_management_api/pix-key-management-api/migrations/versions/: 001_initial_pix_keys.py
aula_3/SDD_Manual_pix_keys_management_api/pix-key-management-api/src/: config.py  db.py  main.py  models.py
aula_3/SDD_Manual_pix_keys_management_api/pix-key-management-api/src/core/: exceptions.py  logging.py
aula_3/SDD_Manual_pix_keys_management_api/pix-key-management-api/src/domain/: models.py
aula_3/SDD_Manual_pix_keys_management_api/pix-key-management-api/src/repositories/: abstract.py  pix_key_repository.py
aula_3/SDD_Manual_pix_keys_management_api/pix-key-management-api/src/schemas/: pix_key.py
aula_3/SDD_Manual_pix_keys_management_api/pix-key-management-api/tests/: conftest.py
aula_3/SPECKIT_pix_keys_management_api/: .env.example  .gitignore  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
aula_3/SPECKIT_pix_keys_management_api/.github/: copilot-instructions.md
aula_3/SPECKIT_pix_keys_management_api/.specify/workflows/: workflow-registry.json
aula_3/SPECKIT_pix_keys_management_api/migrations/: env.py
aula_3/SPECKIT_pix_keys_management_api/specs/001-manage-pix-keys/: research.md  spec.md
aula_3/SPECKIT_pix_keys_management_api/src/: database.py  exceptions.py  logging_config.py  main.py
aula_3/SPECKIT_pix_keys_management_api/src/api/: __init__.py
aula_3/SPECKIT_pix_keys_management_api/src/entities/: pix_key.py  pix_key_audit.py
aula_3/SPECKIT_pix_keys_management_api/src/models/: __init__.py  database_models.py
aula_3/SPECKIT_pix_keys_management_api/src/repositories/: __init__.py
aula_3/SPECKIT_pix_keys_management_api/src/use_cases/: __init__.py  view_pix_keys.py
aula_3/SPECKIT_pix_keys_management_api/tests/contract/: __init__.py
aula_3/SPECKIT_pix_keys_management_api/tests/integration/: __init__.py
aula_3/SPECKIT_pix_keys_management_api/tests/unit/entities/: __init__.py
(+140 files in other folders)
